--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-icons": "^1.9.1",
     "react-dom": "^18.2.0",
+    "react-mailchimp-subscribe": "^2.1.3",
     "react-on-screen": "^2.1.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
