--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-bootstrap-icons": "^1.9.1",
     "react-dom": "^18.2.0",
     "react-mailchimp-subscribe": "^2.1.3",
+    "react-multi-carousel": "^2.8.2",
     "react-on-screen": "^2.1.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
